--- a/peterson-diagrams.html
+++ b/peterson-diagrams.html
@@ -27,21 +27,21 @@ div.desc {
 
 <div class="gallery">
   <a target="_blank" href="peterson_NoSQL.PNG">
-    <img src="../personal-portfolio/web-335/peterson_NoSQL.PNG" alt="NoSQL" width="300" height="200">
+    <img src="../web-335/peterson_NoSQL.PNG" alt="NoSQL" width="300" height="200">
   </a>
   <div class="desc">NoSQL</div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="peterson_ORD.PNG">
-    <img src="../personal-portfolio/web-335/peterson_ORD.PNG" alt="ORD" width="300" height="200">
+    <img src="../web-335/peterson_ORD.PNG" alt="ORD" width="300" height="200">
   </a>
   <div class="desc">ORD</div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="peterson_NodeTechORD.PNG">
-    <img src="../personal-portfolio/web-335/peterson_NodeTechORD.PNG" alt="ORD" width="300" height="200">
+    <img src="../web-335/peterson_NodeTechORD.PNG" alt="ORD" width="300" height="200">
   </a>
   <div class="desc">NodeTech ORD</div>
 </div>
