--- a/peterson-diagrams.html
+++ b/peterson-diagrams.html
@@ -1,5 +1,45 @@
-<html>
-<head>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1,firefox=1">
+
+    <title>The Portfolio of Heather Peterson</title>
+    <link rel="shortcut icon" type="image/png" href='images1/r_hpLogo_blackBack.png'/>
+
+    <meta name="keywords" content="web developer, web, developer, American">
+    <meta name="description" content="The portfolio of Heather Peterson, an American Web Developer">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+
+    <link rel="image_src" href="images1/hpLogo.png">
+    
+    <link href="https://fonts.googleapis.com/css?family=Share+Tech" rel="stylesheet">
+    <link rel="stylesheet" href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700'>
+    <link rel="stylesheet" href='Styles2/styles.css'>
+
+    <a href="#" class="btt"> Back to top </a>
+  </head>
+  <!--start main-->
+<section id="main">
+  
+  <body data-spy="scroll" data-target="navbar" data-offset="64">
+    
+<!--start navbar-->
+    <div class="navbar">
+      <div class="navlogo">
+      <a href="https://heatherpetersonlmm.github.io/Personal-Portfolio/" class="brand">
+        <img src="../personal-portfolio/images/hpLogo_whiteText.png" width="80">
+      </div>
+      </a>
+      <ul>
+        <li><a href="https://heatherpetersonlmm.github.io/Personal-Portfolio/" class="link-main"><strong>MAIN</strong></a></li>
+        <li><a href="../web-335/peterson-diagrams.html" class="link-main"><strong>DIAGRAMS</strong></a></li>
+        <li><a href="../resume/index.html" class="link-main"><strong>RESUMES</strong></a></li>
+      </ul>
+    </div>
+      <br>
+<!--end navbar-->
+
 <style>
 div.gallery {
     margin: 5px;
@@ -25,6 +65,10 @@ div.desc {
 </head>
 <body>
 
+<div class="heading">
+    <h1>DIAGRAMS</h1>
+</div>
+
 <div class="gallery">
   <a target="_blank" href="peterson_NoSQL.PNG">
     <img src="../web-335/peterson_NoSQL.PNG" alt="NoSQL" width="300" height="200">
@@ -39,12 +83,12 @@ div.desc {
   <div class="desc">ORD</div>
 </div>
 
-<div class="gallery">
+<!-- <div class="gallery">
   <a target="_blank" href="peterson_NodeTechORD.PNG">
     <img src="../web-335/peterson_NodeTechORD.PNG" alt="ORD" width="300" height="200">
   </a>
   <div class="desc">NodeTech ORD</div>
-</div>
+</div> -> -->
 
 </body>
 </html>
